--- a/blog-page.html
+++ b/blog-page.html
@@ -131,6 +131,7 @@
                         <li><a href="#">ЦЕНЫ</a></li>
                         <li><a href="#">АКЦИИ</a></li>
                         <li><a href="#">ОТЗЫВЫ</a></li>
+                        <li><a href="#">ПРЕДЛОЖЕНИЕ МЕСЯЦА</a></li>
                     </ul>
                 </div>
             </nav>
