--- a/about.html
+++ b/about.html
@@ -81,6 +81,62 @@
         </div>
 
     </header>
+    <div class="black-line-menu">
+        <div class="container">
+            <nav class="navbar navbar-default">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
+                        data-target="#navbar-main" aria-expanded="false">
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                </div>
+                <div class="collapse navbar-collapse" id="navbar-main">
+                    <ul class="nav navbar-nav">
+                        <li class="dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">О НАС</a>
+                            <ul class="dropdown-menu">
+                                <li><a href="#">Фотогалерея</a></li>
+                                <li><a href="#">Конаткты</a></li>
+                                <li><a href="#">Наши мастера</a></li>
+                                <li><a href="#">Бренды</a></li>
+                                <li><a href="#">Вакансии</a></li>
+                                <li><a href="#">Письмо руководителю</a></li>
+                                <li><a href="#">Новости салона</a></li>
+                            </ul>
+                        </li>
+                        <li class="dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                                УСЛУГИ
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li><a href="#">Мужские стрижки</a></li>
+                                <li><a href="#">Женские стрижки</a></li>
+                                <li><a href="#">Окрашивание волос</a></li>
+                                <li><a href="#">Детские услуги</a></li>
+                                <li><a href="#">Маникюр</a></li>
+                                <li><a href="#">Педикюр</a></li>
+                                <li><a href="#">Эстетическая Косметология</a></li>
+                                <li><a href="#">Инъекционная косметология</a></li>
+                                <li><a href="#">Депиляция</a></li>
+                                <li><a href="#">Макияж</a></li>
+                                <li><a href="#">Татуаж - Перманентный макияж</a></li>
+                                <li><a href="#">Наращивание ресниц</a></li>
+                                <li><a href="#">Массаж</a></li>
+                                <li><a href="#">Пирсинг</a></li>
+                                <li><a href="#">Солярий</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="#">ЦЕНЫ</a></li>
+                        <li><a href="#">АКЦИИ</a></li>
+                        <li><a href="#">ОТЗЫВЫ</a></li>
+                        <li><a href="#">ПРЕДЛОЖЕНИЕ МЕСЯЦА</a></li>
+                    </ul>
+                </div>
+            </nav>
+        </div>
+    </div>
     <div class="container">
         <ul class="breadcrumb">
             <li><a class="link" href="#">Главная</a></li>
@@ -92,34 +148,32 @@
         </div>
         <div class="background-image-block">
             <div class="overlay-block"></div>
-            <div class="container">
-                <h3><span class="underline--magical">У ЛИЦА ТАК МНОГО ГРАНЕЙ</span></h3>
-                <p><span class="underline--magical"><b>Салон красоты Лица</b></span> находится в самом центре города в
-                    двух
-                    шагах от Сенной площади по адресу Спасский пер. 3. Это настоящая фабрика красоты, трудно найти
-                    услугу,
-                    которой здесь не оказывают: для клиентов имеется парикмахерский зал, студия ногтевого сервиса,
-                    богатейшие косметические программы, татуаж, солярий, СПА, отбеливание зубов и многое другое.</p>
-                <p>В <span class="underline--magical"><b>парикмахерском зале</b></span> выполняют стрижки, укладки,
-                    делают
-                    прически и окрашивание в полном соответствии с модными и современными тенденциями, проводят
-                    выпрямление
-                    и лечение волос, создают великолепные завивки.</p>
-                <p><span class="underline--magical"><b>Ногтевой сервис</b></span> предлагает маникюр и педикюр в
-                    классическом, европейском, аппаратном исполнении, наращивание и укрепление ногтей, спа-процедуры для
-                    рук
-                    и ног, декоративные покрытия с применением средств OPI, CND, Shellac.</p>
-                <p><span class="underline--magical"><b>Косметический кабинет</b></span> предоставляет огромное
-                    количество
-                    услуг по уходу за лицом и телом. Здесь есть процедуры аппаратной косметологии, обертывания, пилинги
-                    и
-                    уходы, инъекционная мезотерапия, биоэпиляция, несколько видов массажа. Здесь же оказывают услуги по
-                    визажу, оформляют брови и ресницы, делают татуаж, пирсинг, есть процедура косметического отбеливания
-                    зубов.</p>
-                <p><span class="underline--magical"><b>Солярий</b></span> поможет создать летнее настроение, придать
-                    коже
-                    красивый отдохнувший загорелый вид даже среди глубокой зимы, или промозглой осенью.</p>
-            </div>
+            <h3><span class="underline--magical">У ЛИЦА ТАК МНОГО ГРАНЕЙ</span></h3>
+            <p><span class="underline--magical"><b>Салон красоты Лица</b></span> находится в самом центре города в
+                двух
+                шагах от Сенной площади по адресу Спасский пер. 3. Это настоящая фабрика красоты, трудно найти
+                услугу,
+                которой здесь не оказывают: для клиентов имеется парикмахерский зал, студия ногтевого сервиса,
+                богатейшие косметические программы, татуаж, солярий, СПА, отбеливание зубов и многое другое.</p>
+            <p>В <span class="underline--magical"><b>парикмахерском зале</b></span> выполняют стрижки, укладки,
+                делают
+                прически и окрашивание в полном соответствии с модными и современными тенденциями, проводят
+                выпрямление
+                и лечение волос, создают великолепные завивки.</p>
+            <p><span class="underline--magical"><b>Ногтевой сервис</b></span> предлагает маникюр и педикюр в
+                классическом, европейском, аппаратном исполнении, наращивание и укрепление ногтей, спа-процедуры для
+                рук
+                и ног, декоративные покрытия с применением средств OPI, CND, Shellac.</p>
+            <p><span class="underline--magical"><b>Косметический кабинет</b></span> предоставляет огромное
+                количество
+                услуг по уходу за лицом и телом. Здесь есть процедуры аппаратной косметологии, обертывания, пилинги
+                и
+                уходы, инъекционная мезотерапия, биоэпиляция, несколько видов массажа. Здесь же оказывают услуги по
+                визажу, оформляют брови и ресницы, делают татуаж, пирсинг, есть процедура косметического отбеливания
+                зубов.</p>
+            <p><span class="underline--magical"><b>Солярий</b></span> поможет создать летнее настроение, придать
+                коже
+                красивый отдохнувший загорелый вид даже среди глубокой зимы, или промозглой осенью.</p>
         </div>
         <div class="about-carousel">
             <div class="about-carousel-item">
