--- a/litsa-spb.html
+++ b/litsa-spb.html
@@ -146,6 +146,7 @@
                         <li><a href="#">ЦЕНЫ</a></li>
                         <li><a href="#">АКЦИИ</a></li>
                         <li><a href="#">ОТЗЫВЫ</a></li>
+                        <li><a href="#">ПРЕДЛОЖЕНИЕ МЕСЯЦА</a></li>
                     </ul>
                 </div>
             </nav>
