--- a/services.html
+++ b/services.html
@@ -81,6 +81,62 @@
         </div>
 
     </header>
+    <div class="black-line-menu">
+        <div class="container">
+            <nav class="navbar navbar-default">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
+                        data-target="#navbar-main" aria-expanded="false">
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                </div>
+                <div class="collapse navbar-collapse" id="navbar-main">
+                    <ul class="nav navbar-nav">
+                        <li class="dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">О НАС</a>
+                            <ul class="dropdown-menu">
+                                <li><a href="#">Фотогалерея</a></li>
+                                <li><a href="#">Конаткты</a></li>
+                                <li><a href="#">Наши мастера</a></li>
+                                <li><a href="#">Бренды</a></li>
+                                <li><a href="#">Вакансии</a></li>
+                                <li><a href="#">Письмо руководителю</a></li>
+                                <li><a href="#">Новости салона</a></li>
+                            </ul>
+                        </li>
+                        <li class="dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                                УСЛУГИ
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li><a href="#">Мужские стрижки</a></li>
+                                <li><a href="#">Женские стрижки</a></li>
+                                <li><a href="#">Окрашивание волос</a></li>
+                                <li><a href="#">Детские услуги</a></li>
+                                <li><a href="#">Маникюр</a></li>
+                                <li><a href="#">Педикюр</a></li>
+                                <li><a href="#">Эстетическая Косметология</a></li>
+                                <li><a href="#">Инъекционная косметология</a></li>
+                                <li><a href="#">Депиляция</a></li>
+                                <li><a href="#">Макияж</a></li>
+                                <li><a href="#">Татуаж - Перманентный макияж</a></li>
+                                <li><a href="#">Наращивание ресниц</a></li>
+                                <li><a href="#">Массаж</a></li>
+                                <li><a href="#">Пирсинг</a></li>
+                                <li><a href="#">Солярий</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="#">ЦЕНЫ</a></li>
+                        <li><a href="#">АКЦИИ</a></li>
+                        <li><a href="#">ОТЗЫВЫ</a></li>
+                        <li><a href="#">ПРЕДЛОЖЕНИЕ МЕСЯЦА</a></li>
+                    </ul>
+                </div>
+            </nav>
+        </div>
+    </div>
     <div class="container">
         <ul class="breadcrumb">
             <li><a class="link" href="#">Главная</a></li>
