--- a/litsa-spb.html
+++ b/litsa-spb.html
@@ -250,8 +250,130 @@
             </div>
         </div>
     </div>-->
-
     <div class="container">
+        <div class="title-page">
+            <h2>НАШИ МАСТЕРА</h2>
+        </div>
+        <div class="masters-carousel">
+            <div class="masters-carousel-item">
+                <div class="masters-carousel-foto">
+                    <img src="images/master1.jpg" alt="">
+                </div>
+                <div class="masters-carousel-title">
+                    <div class="masters-carousel-name">
+                        КАМИЛЛА
+                    </div>
+                    <div class="masters-carousel-special">
+                        Мастер по наращиванию ногтей
+                    </div>
+                </div>
+            </div>
+            <div class="masters-carousel-item">
+                <div class="masters-carousel-foto">
+                    <img src="images/master2.jpg" alt="">
+                </div>
+                <div class="masters-carousel-title">
+                    <div class="masters-carousel-name">
+                        МАЙЯ
+                    </div>
+                    <div class="masters-carousel-special">
+                        Косметолог
+                    </div>
+                </div>
+            </div>
+            <div class="masters-carousel-item">
+                <div class="masters-carousel-foto">
+                    <img src="images/master3.jpg" alt="">
+                </div>
+                <div class="masters-carousel-title">
+                    <div class="masters-carousel-name">
+                        ВИКТОР
+                    </div>
+                    <div class="masters-carousel-special">
+                        Мужской парикмахер - Барбер
+                    </div>
+                </div>
+            </div>
+            <div class="masters-carousel-item">
+                <div class="masters-carousel-foto">
+                    <img src="images/master4.jpg" alt="">
+                </div>
+                <div class="masters-carousel-title">
+                    <div class="masters-carousel-name">
+                        ЕЛЕНА
+                    </div>
+                    <div class="masters-carousel-special">
+                        Парикмахер
+                    </div>
+                </div>
+            </div>
+            <div class="masters-carousel-item">
+                <div class="masters-carousel-foto">
+                    <img src="images/master5.jpg" alt="">
+                </div>
+                <div class="masters-carousel-title">
+                    <div class="masters-carousel-name">
+                        МАРИНА
+                    </div>
+                    <div class="masters-carousel-special">
+                        Парикмахер - стилист
+                    </div>
+                </div>
+            </div>
+            <div class="masters-carousel-item">
+                <div class="masters-carousel-foto">
+                    <img src="images/master6.jpg" alt="">
+                </div>
+                <div class="masters-carousel-title">
+                    <div class="masters-carousel-name">
+                        ЮЛИЯ
+                    </div>
+                    <div class="masters-carousel-special">
+                        Косметолог
+                    </div>
+                </div>
+            </div>
+            <div class="masters-carousel-item">
+                <div class="masters-carousel-foto">
+                    <img src="images/master7.jpg" alt="">
+                </div>
+                <div class="masters-carousel-title">
+                    <div class="masters-carousel-name">
+                        МАЙЯ
+                    </div>
+                    <div class="masters-carousel-special">
+                        Мастер ногтевого сервиса
+                    </div>
+                </div>
+            </div>
+            <div class="masters-carousel-item">
+                <div class="masters-carousel-foto">
+                    <img src="images/master8.jpg" alt="">
+                </div>
+                <div class="masters-carousel-title">
+                    <div class="masters-carousel-name">
+                        ВЛАДИСЛАВ
+                    </div>
+                    <div class="masters-carousel-special">
+                        Парикмахер - стилист
+                    </div>
+                </div>
+            </div>
+            <div class="masters-carousel-item">
+                <div class="masters-carousel-foto">
+                    <img src="images/master9.jpg" alt="">
+                </div>
+                <div class="masters-carousel-title">
+                    <div class="masters-carousel-name">
+                        ВИКТОРИЯ
+                    </div>
+                    <div class="masters-carousel-special">
+                        Администратор
+                    </div>
+                </div>
+            </div>
+        </div>
+
         <div class="title-page">
             <h2>МЫ В INSTAGRAM</h2>
         </div>
