--- a/litsa-spb.html
+++ b/litsa-spb.html
@@ -407,6 +407,61 @@
             <a href="https://www.instagram.com/salon_litsa_spb" target="_blank" class="fancy-btn"><i
                     class="fa fa-instagram" aria-hidden="true"></i> БОЛЬШЕ ФОТО</a>
         </div>
+        <div class="title-page">
+            <h2>ОТЗЫВЫ</h2>
+        </div>
+        <div class="feedback-carousel">
+            <div class="feedback-carousel-item">
+                <div class="feedback-carousel-user">
+                    <div class="feedback-carousel-user-img">
+                        <img src="images/master1.jpg" alt="">
+                    </div>
+                    <div class="feedback-carousel-user-name">
+                        ТАТЬЯНА ПЕТРОВА
+                    </div>
+                </div>
+                <div class="feedback-carousel-text">
+                    Товарищи! сложившаяся структура организации представляет собой интересный эксперимент проверки
+                    направлений прогрессивного развития. С другой стороны укрепление и развитие структуры обеспечивает
+                    участие в формировании систем массового участия. Идейные соображения высшего порядка, а также рамки
+                    и
+                    место обучения кадров обеспечивает широкому кругу (специалистов) участие в формировании новых
+                    предложений.
+                </div>
+            </div>
+            <div class="feedback-carousel-item">
+                <div class="feedback-carousel-user">
+                    <div class="feedback-carousel-user-img">
+                        <img src="images/master4.jpg" alt="">
+                    </div>
+                    <div class="feedback-carousel-user-name">
+                        ВАЛЯ ИВАНОВА
+                    </div>
+                </div>
+                <div class="feedback-carousel-text">
+                    Таким образом новая модель организационной деятельности способствует подготовки и реализации систем
+                    массового участия. Не следует, однако забывать, что дальнейшее развитие различных форм деятельности
+                    способствует подготовки и реализации форм развития.
+                </div>
+            </div>
+            <div class="feedback-carousel-item">
+                <div class="feedback-carousel-user">
+                    <div class="feedback-carousel-user-img">
+                        <img src="images/master2.jpg" alt="">
+                    </div>
+                    <div class="feedback-carousel-user-name">
+                        ЮЛЯ СИДОРОВА
+                    </div>
+                </div>
+                <div class="feedback-carousel-text">
+                    Значимость этих проблем настолько очевидна, что консультация с широким активом играет важную роль в
+                    формировании новых предложений. Равным образом постоянный количественный рост и сфера нашей
+                    активности
+                    играет важную роль в формировании системы обучения кадров, соответствует насущным потребностям.
+                </div>
+            </div>
+        </div>
+
     </div>
     <div class="title-page">
         <h2>ГАЛЕРЕЯ РАБОТ</h2>
